Closed Bug 1688712 Opened 5 years ago Closed 5 years ago

Fission Intermittent docshell/test/navigation/test_bug1300461.html | check history index - got +0, expected 1

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Fission Milestone M7a
Tracking Status
firefox-esr78 --- unaffected
firefox85 --- unaffected
firefox86 --- unaffected
firefox87 --- disabled
firefox89 --- disabled
firefox90 --- disabled
firefox91 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: smaug)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [stockwell disabled])

Attachments

(2 files)

Filed by: ncsoregi [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=327704788&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/NpBNTmZYS6ul3YiHAnWFtQ/runs/0/artifacts/public/logs/live_backing.log


[task 2021-01-25T16:28:00.406Z] 16:28:00     INFO - TEST-PASS | docshell/test/navigation/test_bug1300461.html | check history length 
[task 2021-01-25T16:28:00.407Z] 16:28:00     INFO - Buffered messages finished
[task 2021-01-25T16:28:00.408Z] 16:28:00     INFO - TEST-UNEXPECTED-FAIL | docshell/test/navigation/test_bug1300461.html | check history index - got +0, expected 1
[task 2021-01-25T16:28:00.409Z] 16:28:00     INFO -     SimpleTest.is@SimpleTest/SimpleTest.js:500:14
[task 2021-01-25T16:28:00.410Z] 16:28:00     INFO -     test@docshell/test/navigation/file_bug1300461_back.html:19:18
[task 2021-01-25T16:28:00.411Z] 16:28:00     INFO -     onload@docshell/test/navigation/file_bug1300461_back.html:1:1
[task 2021-01-25T16:28:00.413Z] 16:28:00     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aClipRect_TL", count: 4, kind: F32 } is not found in the shader cs_clip_rectangle. Expected at 8, found at -1
[task 2021-01-25T16:28:00.414Z] 16:28:00     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aClipRect_TR", count: 4, kind: F32 } is not found in the shader cs_clip_rectangle. Expected at 10, found at -1
[task 2021-01-25T16:28:00.415Z] 16:28:00     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aClipRadii_TR", count: 4, kind: F32 } is not found in the shader cs_clip_rectangle. Expected at 11, found at -1
[task 2021-01-25T16:28:00.416Z] 16:28:00     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aClipRect_BL", count: 4, kind: F32 } is not found in the shader cs_clip_rectangle. Expected at 12, found at -1
[task 2021-01-25T16:28:00.417Z] 16:28:00     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aClipRadii_BL", count: 4, kind: F32 } is not found in the shader cs_clip_rectangle. Expected at 13, found at -1
[task 2021-01-25T16:28:00.418Z] 16:28:00     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aClipRect_BR", count: 4, kind: F32 } is not found in the shader cs_clip_rectangle. Expected at 14, found at -1
[task 2021-01-25T16:28:00.419Z] 16:28:00     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aClipRadii_BR", count: 4, kind: F32 } is not found in the shader cs_clip_rectangle. Expected at 15, found at -1
[task 2021-01-25T16:28:01.383Z] 16:28:01     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aUvRect1", count: 4, kind: F32 } is not found in the shader composite. Expected at 6, found at -1
[task 2021-01-25T16:28:01.384Z] 16:28:01     INFO - GECKO(1538) | [WARN  webrender::device::gl] Attribute VertexAttribute { name: "aUvRect2", count: 4, kind: F32 } is not found in the shader composite. Expected at 7, found at -1
[task 2021-01-25T16:28:01.796Z] 16:28:01     INFO - TEST-PASS | docshell/test/navigation/test_bug1300461.html | Got requested index from parent ```

This failure is with Fission enabled, and it looks like this test was recently changed to be fixed with Fission.

Keywords: regression
Regressed by: 1679418
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1679418

In the last 7 days there have been 26 occurrences on linux1804-64 debug and opt.

Recent failure: https://treeherder.mozilla.org/logviewer?job_id=330625525&repo=mozilla-central&lineNumber=2769

Neha, could you, please, assign this to the appropriate person?

Flags: needinfo?(nkochar)

Peter, please fix this.

Assignee: nobody → peterv
Severity: S4 → S3
Status: NEW → ASSIGNED
Flags: needinfo?(nkochar) → needinfo?(peterv)
Priority: P5 → P3

Update:

There have been 30 failures within the last 7 days:

  • 9 failures on Linux 18.04 x64 WebRender debug
  • 10 failures on Linux 18.04 x64 shippable opt
  • 11 failures on Linux 18.04 x64 WebRender Shippable opt

Recent failure log: https://treeherder.mozilla.org/logviewer?job_id=331402753&repo=mozilla-central&lineNumber=2768

[task 2021-02-26T23:35:00.676Z] 23:35:00 INFO - TEST-PASS | docshell/test/navigation/test_bug1300461.html | check history length
[task 2021-02-26T23:35:00.676Z] 23:35:00 INFO - Buffered messages finished
[task 2021-02-26T23:35:00.678Z] 23:35:00 INFO - TEST-UNEXPECTED-FAIL | docshell/test/navigation/test_bug1300461.html | check history index - got +0, expected 1
[task 2021-02-26T23:35:00.679Z] 23:35:00 INFO - SimpleTest.is@SimpleTest/SimpleTest.js:500:14
[task 2021-02-26T23:35:00.679Z] 23:35:00 INFO - test@docshell/test/navigation/file_bug1300461_back.html:19:18
[task 2021-02-26T23:35:00.679Z] 23:35:00 INFO - onload@docshell/test/navigation/file_bug1300461_back.html:1:1
[task 2021-02-26T23:35:00.680Z] 23:35:00 INFO - TEST-PASS | docshell/test/navigation/test_bug1300461.html | Got requested index from parent

Whiteboard: [stockwell needswork:owner]
Keywords: leave-open
Whiteboard: [stockwell needswork:owner] → [stockwell disabled][leave-open]
Pushed by abutkovits@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/82c364804d91 disable test_bug1300461.html for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Whiteboard: [stockwell disabled][leave-open] → [stockwell disabled]

Peter, this test was fixed for SHIP in bug 1679418, but then disabled for all Fission. Should fixing this test block Fission MVP?

[test_bug1300461.html]
skip-if =
  fission # Bug 1688712

https://searchfox.org/mozilla-central/rev/74f3c420ee54001059e1850bef3be876749ff873/docshell/test/navigation/mochitest.ini#144-146

Fission Milestone: --- → ?
Summary: Intermittent docshell/test/navigation/test_bug1300461.html | check history index - got +0, expected 1 → Fission Intermittent docshell/test/navigation/test_bug1300461.html | check history index - got +0, expected 1

Olli will try to reproduce this test failure with his new session history patch.

Assignee: peterv → bugs
Fission Milestone: ? → M7a
Flags: needinfo?(peterv)

The test's file_bug1300461_back.html page has the wrong index.

a test

Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fddc3a90e3ab when replacing a LoadingSessionHistoryInfo, initialize member variables using values from the old object, r=annyG
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Keywords: leave-open
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: