Bug 1688712, when replacing a LoadingSessionHistoryInfo, initialize member variables using values from the old object, r=annyG

Differential Revision: https://phabricator.services.mozilla.com/D117362