docshell/shistory/SessionHistoryEntry.h
@@ -213,7 +213,9 @@ class SessionHistoryInfo {
 struct LoadingSessionHistoryInfo {
   LoadingSessionHistoryInfo() = default;
   explicit LoadingSessionHistoryInfo(SessionHistoryEntry* aEntry);
-  LoadingSessionHistoryInfo(SessionHistoryEntry* aEntry, uint64_t aLoadId);
+  // Initializes mInfo using aEntry and otherwise copies the values from aInfo.
+  LoadingSessionHistoryInfo(SessionHistoryEntry* aEntry,
+                            LoadingSessionHistoryInfo* aInfo);
 
   already_AddRefed<nsDocShellLoadState> CreateLoadInfo() const;
 
